--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^3.8.6",
+  "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
     "gulp-autoprefixer": "0.0.8",
     "gulp-cache": "^0.2.0",
     "gulp-concat": "^2.3.3",
@@ -19,10 +20,9 @@
     "gulp-minify-css": "^0.3.6",
     "gulp-notify": "^1.4.0",
     "gulp-rename": "^1.2.0",
-    "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-svg2png": "^0.3.0",
-    "gulp-svgstore": "^1.0.1",
+    "gulp-svgstore": "^3.0.0",
     "gulp-uglify": "^0.3.1",
     "normalize.css": "^3.0.1",
     "tiny-lr": "0.0.9"
