--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cheerio": "^0.18.0",
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "0.0.8",
     "gulp-cache": "^0.2.0",
+    "gulp-cheerio": "^0.4.0",
     "gulp-concat": "^2.3.3",
     "gulp-imagemin": "^0.6.1",
     "gulp-jshint": "^1.7.1",
@@ -22,7 +24,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.2",
     "gulp-svg2png": "^0.3.0",
-    "gulp-svgstore": "^3.0.0",
+    "gulp-svgstore": "^4.0.0",
     "gulp-uglify": "^0.3.1",
     "normalize.css": "^3.0.1",
     "tiny-lr": "0.0.9"
