--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "cheerio": "^0.18.0",
     "del": "^0.1.3",
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "0.0.8",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.2.0",
     "gulp-cheerio": "^0.4.0",
     "gulp-concat": "^2.3.3",
@@ -22,7 +22,7 @@
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^1.4.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.2",
+    "gulp-sass": "^2.1.0",
     "gulp-svg2png": "^0.3.0",
     "gulp-svgstore": "^4.0.0",
     "gulp-uglify": "^0.3.1",
